[package]
name = "zen"
version = "0.0.1"
authors = ["Tyler Harold <tyler@programmer.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
syntect = "5.1.0"
termion = "2.0.3"
tokio = {version = "1.35.0", features = ["full"]}
unicode-segmentation = "1.10.1"
